--- a/ui/package.json
+++ b/ui/package.json
@@ -46,10 +46,11 @@
     "@types/lodash": "^4.14.153",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
+    "apexcharts": "^3.19.2",
     "lodash": "^4.17.15",
     "performance-now": "^0.2.0",
     "react": "^16.13.1",
-    "react-charts": "^2.0.0-beta.7",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.3.11",
     "react-redux": "^7.2.0",
